Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <!-- ======== HERO SECTION ======== -->
     <header class="hero-section text-white text-center">
         <div class="container d-flex flex-column justify-content-center align-items-center h-100">
-            <h1 class="display-4 fw-bold">Precision 3D Printing & CAD Design</h1>
-            <p class="lead my-3">Transforming your digital ideas into high-quality, functional prototypes with speed, precision, and creativity.</p>
+            <h1 class="display-4 fw-bold animated animate-fade-up">Precision 3D Printing & CAD Design</h1>
+            <p class="lead my-3 animated animate-fade-up animation-delay-200">Transforming your digital ideas into high-quality, functional prototypes with speed, precision, and creativity.</p>
             <a href="services.html" class="btn btn-primary btn-lg">Explore Our Services</a>
         </div>
     </header>
 
     <!-- ======== SERVICES OVERVIEW SECTION ======== -->
-    <section class="py-5">
+    <section class="py-5 animated animate-fade-in animation-delay-600">
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="fw-bold">Our Core Services</h2>
@@ -70,7 +70,7 @@
     </section>
     
     <!-- ======== PORTFOLIO PREVIEW SECTION ======== -->
-    <section class="py-5 bg-light">
+    <section class="py-5 bg-light animated animate-fade-in animation-delay-600">
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="fw-bold">Our Recent Work</h2>
@@ -78,9 +78,9 @@
             </div>
             <div class="row g-4">
                 <!-- TODO: Replace these placeholders with your actual project images -->
-                <div class="col-md-4"><img src="https://via.placeholder.com/600x400.png?text=Project+One" class="img-fluid rounded shadow-sm" alt="3D printed project 1"></div>
-                <div class="col-md-4"><img src="https://via.placeholder.com/600x400.png?text=Project+Two" class="img-fluid rounded shadow-sm" alt="3D printed project 2"></div>
-                <div class="col-md-4"><img src="https://via.placeholder.com/600x400.png?text=Project+Three" class="img-fluid rounded shadow-sm" alt="3D printed project 3"></div>
+                <div class="col-md-4"><img src="assets/images/logo.png" class="img-fluid rounded shadow-sm" alt="3D printed project 1"></div>
+                <div class="col-md-4"><img src="assets/images/logo.png" class="img-fluid rounded shadow-sm" alt="3D printed project 2"></div>
+                <div class="col-md-4"><img src="assets/images/logo.png" class="img-fluid rounded shadow-sm" alt="3D printed project 3"></div>
             </div>
             <div class="text-center mt-4">
                 <a href="portfolio.html" class="btn btn-outline-primary">View Full Portfolio</a>
