Implement admin login and dashboard pages, enhance contact form, and update footer branding

--- a/footer.html
+++ b/footer.html
@@ -3,8 +3,9 @@
     <div class="container py-5">
         <!-- Top Row: Logo and Socials -->
         <div class="row mb-4">
-            <div class="col-md-6">
-                <h5 class="fw-bold">DraftOrbit Studio</h5>
+            <div class="col-md-6 d-flex align-items-center">
+                <img src="assets/images/logo.png" alt="DraftOrbit Studio Logo" width="32" height="32" class="fw-bold me-2">
+                <h5 class="fw-bold mb-0">DraftOrbit Studio</h5>
             </div>
             <div class="col-md-6 d-flex justify-content-md-end">
                 <a href="#" class="footer-social-icon"><i class="bi bi-instagram"></i></a>
