--- a/navbar.html
+++ b/navbar.html
@@ -57,7 +57,7 @@
                         <li><span class="dropdown-item-text text-muted" id="user-email-display">user@example.com</span></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="account.html">My Account</a></li>
-                        <li><a class="dropdown-item" href="#">My Projects</a></li>
+                        <li><a class="dropdown-item" href="my-projects.html">My Projects</a></li>
                         <li><a class="dropdown-item" href="#" id="logout-button">Logout</a></li>
                     </ul>
                 </div>
