--- a/admin.html
+++ b/admin.html
@@ -57,14 +57,20 @@
 
     <!-- All Logic is Self-Contained Here -->
     <script>
-        // --- CONFIG & SETUP ---
-        const ADMIN_UID = "vSvd3m74q8ZWUsxoGpphKEnxkcH3"; // IMPORTANT!
+        // --- THIS IS THE CORRECTED CONFIGURATION ---
         const firebaseConfig = {
             apiKey: "AIzaSyBEb1sB_AXKGxam3si8m81LPgr3b8HXTvg",
             authDomain: "draftorbit-web.firebaseapp.com",
-            // ... (your full config object)
+            projectId: "draftorbit-web",
+            storageBucket: "draftorbit-web.firebasestorage.app",
+            messagingSenderId: "687122816959",
+            appId: "1:687122816959:web:a495dc656f84f2e6b24b0a",
+            measurementId: "G-7DTWGJQ4K9"
         };
+        // This line initializes the Firebase App for this page.
         if (!firebase.apps.length) { firebase.initializeApp(firebaseConfig); }
+
+        const ADMIN_UID = "vSvd3m74q8ZWUsxoGpphKEnxkcH3"; // Don't forget to set this!
         
         const db = firebase.firestore();
         const tableBody = document.getElementById('projects-table-body');
@@ -88,7 +94,7 @@
             });
         });
 
-        // --- DATA FUNCTIONS (Same as before) ---
+        // --- DATA FUNCTIONS (These will run after the config is fixed) ---
         function updateProjectStatus(projectId, newStatus) {
             db.collection('projects').doc(projectId).update({ status: newStatus })
                 .then(() => {
