--- a/admin.html
+++ b/admin.html
@@ -17,6 +17,7 @@
             <a class="navbar-brand fw-bold" href="admin.html">DraftOrbit Admin</a>
         </div>
         <div>
+            <a href="admin-portfolio.html" class="btn btn-warning me-2">Manage Portfolio</a>
             <!-- ADD THIS NEW LINK -->
             <a href="admin-pricing.html" class="btn btn-info">Manage Pricing</a>
             <button class="btn btn-outline-light" id="logout-button">Logout</button>
