--- a/admin-portfolio.html
+++ b/admin-portfolio.html
@@ -73,7 +73,7 @@
             }
 
             // Load existing data from the live file
-            fetch('../portfolio-data.json')
+            fetch('portfolio-data.json')
                 .then(response => {
                     if (!response.ok) {
                         throw new Error('portfolio-data.json file not found. A new one will be created on save.');
