chore: Simplify 'Our Story' section text in about.html

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
             <div class="row align-items-center">
                 <div class="col-md-6 mb-4 mb-md-0">
                     <h2 class="fw-bold">Our Story</h2>
-                    <p class="text-muted">DraftOrbit Studio was founded in 2025 from a passion for accessible prototyping and creativity. Based in Mandya, Karnataka, we are a precision-driven 3D printing and CAD design studio specializing in FDM printing with PLA and other eco-friendly materials.</p>
-                    <p class="text-muted">Our home-based setup allows us to offer flexible service, transparent pricing, and personalized solutions for students, entrepreneurs, makers, and small businesses alike.</p>
+                    <p class="text-muted">DraftOrbit Studio was founded in 2025 from a passion for accessible prototyping and creativity.</p>
+                    <p class="text-muted">Our setup allows us to offer flexible service, transparent pricing, and personalized solutions for students, entrepreneurs, makers, and small businesses alike.</p>
                 </div>
                 <div class="col-md-6">
                     <!-- TODO: Replace with a photo of your workspace or yourself -->
