--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                 <div class="col-md-6">
                     <i class="bi bi-eye-fill fs-1 text-primary"></i>
                     <h3 class="fw-bold mt-3">Our Vision</h3>
-                    <p class="lead">To become the go-to 3D prototyping studio for students, startups, and local businesses across Mandya and the broader Bengaluru region.</p>
+                    <p class="lead">To become the go-to 3D prototyping studio for students, startups, and local businesses.</p>
                 </div>
             </div>
         </div>
