--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-md-6">
                     <!-- TODO: Replace with an image of a 3D print in progress or a finished model -->
-                    <img src="https://via.placeholder.com/800x600.png?text=High-Quality+3D+Prints" class="img-fluid rounded shadow" alt="A high-quality 3D print">
+                    <img src="assets/images/3D_printer.jpg" class="img-fluid rounded shadow" alt="A high-quality 3D print">
                 </div>
                 <div class="col-md-6">
                     <h2 class="fw-bold">3D Printing Services</h2>
@@ -58,7 +58,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-md-6 order-md-2">
                     <!-- TODO: Replace with an image of CAD software on a screen -->
-                    <img src="https://via.placeholder.com/800x600.png?text=CAD+Modeling+Screen" class="img-fluid rounded shadow" alt="CAD model on a computer screen">
+                    <img src="assets/images/CAD.jpg" class="img-fluid rounded shadow" alt="CAD model on a computer screen">
                 </div>
                 <div class="col-md-6 order-md-1">
                     <h2 class="fw-bold">Custom CAD Design & Modeling</h2>
