--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
     
     <!-- SEO Meta Tags -->
-    <title>DraftOrbit Studio – 3D Printing & CAD Design in Mandya</title>
+    <title>DraftOrbit Studio </title>
     <meta name="description" content="Precision 3D printing and custom CAD design studio in Mandya, Karnataka. We transform your ideas into high-quality prototypes.">
 
     <!-- Bootstrap CSS -->
