feat: Integrate AI Assistant across multiple pages and enhance styles

--- a/about.html
+++ b/about.html
@@ -102,6 +102,8 @@
     
     <!-- Your Custom Scripts -->
     <script src="assets/js/main.js"></script>
+    <!-- NEW: Add the assistant script here -->
+    <script src="assets/js/assistant.js"></script> 
     <script src="assets/js/auth.js"></script> <!-- This must be present -->
 </body>
 </html>
