--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
     <!-- Your Custom Scripts -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/auth.js"></script> <!-- This must be present -->
+
+    <!-- NEW: Add the assistant script here -->
+    <script src="assets/js/assistant.js"></script> 
     <!-- The Master Controller Script -->
 
         <!-- ... (your other scripts like main.js and auth.js) ... -->
