--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/auth.js"></script>
+    <!-- NEW: Add the assistant script here -->
+    <script src="assets/js/assistant.js"></script> 
     
     <!-- Page-specific script to load the portfolio -->
     <script>
