--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="assets/js/auth.js"></script>
     <script src="assets/js/main.js"></script>
+    <!-- NEW: Add the assistant script here -->
+    <script src="assets/js/assistant.js"></script> 
         <!-- ... all your HTML content and other script tags ... -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
