--- a/page.html
+++ b/page.html
@@ -53,6 +53,8 @@
     <script src="assets/js/pages-data.js"></script>
     <script src="assets/js/page-renderer.js" defer></script>
     <script src="assets/js/auth.js" defer></script>
+    <!-- NEW: Add the assistant script here -->
+    <script src="assets/js/assistant.js"></script> 
 
         <!-- ===== SCRIPTS ===== -->
     
