--- a/services.html
+++ b/services.html
@@ -90,6 +90,8 @@
     <!-- Your Custom Scripts -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/auth.js"></script> <!-- This must be present -->
+    <!-- NEW: Add the assistant script here -->
+    <script src="assets/js/assistant.js"></script> 
    
 </body>
 </html>
