--- a/page.html
+++ b/page.html
@@ -48,6 +48,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js"></script> <!-- Loads Navbar/Footer -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     
     <!-- IMPORTANT: Link to your new database and renderer files -->
     <script src="assets/js/pages-data.js"></script>
