--- a/account.html
+++ b/account.html
@@ -51,6 +51,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="assets/js/auth.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- NEW: Add the assistant script here -->
     <script src="assets/js/assistant.js"></script> 
     <script>
