--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,7 @@
     <script src="assets/js/auth.js"></script>
     <!-- NEW: Add the assistant script here -->
     <script src="assets/js/assistant.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     
     <!-- Page-specific script to load the portfolio -->
     <script>
