--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta name="referrer" content="origin">
+
     <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
     
     <!-- SEO Meta Tags -->
