--- a/my-projects.html
+++ b/my-projects.html
@@ -12,7 +12,7 @@
 <body>
     <div id="navbar-placeholder"></div>
     <div class="container py-5">
-        <div class="d-flex justify-content-between align-items-center mb-4"><h1 class="fw-bold mb-0">My Projects</h1><a href="contact.html" class="btn btn-primary">Submit a New Project</a></div>
+        <div class="d-flex justify-content-between align-items-center mb-4"><h1 class="fw-bold mb-0">My Projects</h1><a href="quote.html" class="btn btn-primary">Submit a New Project</a></div>
         <div class="list-group" id="projects-list-container"><div class="text-center p-5"><div class="spinner-border" role="status"><span class="visually-hidden">Loading...</span></div></div></div>
     </div>
     <div id="footer-placeholder"></div>
