--- a/navbar.html
+++ b/navbar.html
@@ -66,8 +66,8 @@
                 <div class="vr mx-2 d-none d-lg-block" id="auth-divider"></div>
 
                 <!-- Contact Buttons -->
-                <a href="contact.html" class="btn btn-outline-secondary btn-sm me-2">Get a Demo</a>
-                <a href="contact.html" class="btn btn-primary btn-sm d-flex align-items-center">
+                <a href="contact.html" class="btn btn-outline-secondary btn-sm me-2">Get in Touch</a>
+                <a href="quote.html" class="btn btn-primary btn-sm d-flex align-items-center">
                     Get a Quote <i class="bi bi-arrow-right ms-2"></i>
                 </a>
             </div>
