--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
                         <li class="mb-2"><i class="bi bi-check-circle-fill text-primary me-2"></i><strong>Ideal For:</strong> Engineering mockups, fit testing, and student projects.</li>
                         <li class="mb-2"><i class="bi bi-check-circle-fill text-primary me-2"></i><strong>Precision:</strong> High-resolution printing for fine details.</li>
                     </ul>
-                    <a href="contact.html" class="btn btn-outline-primary">Request a Print</a>
+                    <a href="quote.html" class="btn btn-outline-primary">Request a Print</a>
                 </div>
             </div>
 
